# tickflow

./: .gitignore  devenv.nix  pyproject.toml
tests/api/: conftest.py  test_tasks_endpoints.py
tickflow/app/: main.py
tickflow/core/: client.py
tickflow/core/models/: __init__.py  models.py
tickflow/database/: database.py  dependencies.py
