[tool.poetry]
name = "tickflow"
version = "0.1.0"
description = "Simple Python todo app with a CLI and WebApp component."
authors = ["Max Koopman <captaineureka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mimesis = "^11.1.0"
hypothesis = "^6.88.1"

[tool.poetry.scripts]
tickflow = "tickflow.main:app"
tickflow-cli = "tickflow.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
