[tool.poetry]
name = "tickflow"
version = "0.1.0"
description = "Simple Python todo app with a CLI and WebApp component."
authors = ["Max Koopman <captaineureka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
typer = "^0.9.0"
flusso = "^0.1.0"
uvicorn = "^0.23.2"
httpx = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mimesis = "^11.1.0"
hypothesis = "^6.88.1"
pytest-icdiff = "^0.8"
pytest-clarity = "^1.0.1"

[tool.poetry.scripts]
tickflow = "tickflow.main:app"
tickflow-cli = "tickflow.cli:app"
serve = "uvicorn tickflow.app.main:app --reload --host 127.0.0.1 --port 8000"

[tool.pytest.ini_options]
markers = ["integ: marks integration tests"]
addopts = "-vv -ra -q"
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
